--- a/Concentration/Base.lproj/Main.storyboard
+++ b/Concentration/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -26,9 +27,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66U-pL-96P">
-                                <rect key="frame" x="16" y="224" width="343" height="218"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66U-pL-96P">
+                                <rect key="frame" x="172.5" y="224" width="30" height="218"/>
                                 <fontDescription key="fontDescription" name="A-Goblin-Appears!" family="A Goblin Appears!" pointSize="20"/>
                                 <state key="normal">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -181,23 +181,20 @@
                                     <action selector="clickCard:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZEB-zI-gDT"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Flips: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9es-5s-0fF">
-                                <rect key="frame" x="95" y="578" width="185" height="39"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flips: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9es-5s-0fF">
+                                <rect key="frame" x="134" y="588" width="107" height="17"/>
                                 <fontDescription key="fontDescription" name="A-Goblin-Appears!" family="A Goblin Appears!" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Best Score: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IUB-CE-qxf">
-                                <rect key="frame" x="56" y="608" width="263" height="39"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Best Score: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IUB-CE-qxf">
+                                <rect key="frame" x="80.5" y="620" width="214" height="17"/>
                                 <fontDescription key="fontDescription" name="A-Goblin-Appears!" family="A Goblin Appears!" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jlx-EI-W38">
-                                <rect key="frame" x="16" y="20" width="80" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jlx-EI-W38">
+                                <rect key="frame" x="16" y="25" width="69" height="27"/>
                                 <fontDescription key="fontDescription" name="A-Goblin-Appears!" family="A Goblin Appears!" pointSize="15"/>
                                 <state key="normal" title="Home">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -208,6 +205,17 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.8725581765" green="0.37732711429999999" blue="0.35693135860000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="jlx-EI-W38" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="5PE-ux-Caz"/>
+                            <constraint firstItem="IUB-CE-qxf" firstAttribute="top" secondItem="9es-5s-0fF" secondAttribute="bottom" constant="15" id="AiB-gt-Muv"/>
+                            <constraint firstItem="IUB-CE-qxf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AxE-10-014"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="IUB-CE-qxf" secondAttribute="bottom" constant="30" id="K5w-wW-zzK"/>
+                            <constraint firstItem="66U-pL-96P" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="V7c-6k-0yN"/>
+                            <constraint firstItem="jlx-EI-W38" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="5" id="W3b-rK-pyk"/>
+                            <constraint firstItem="9es-5s-0fF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fs2-z8-Rd0"/>
+                            <constraint firstItem="jlx-EI-W38" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="q95-oR-fL3"/>
+                            <constraint firstItem="jlx-EI-W38" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="5" id="v0C-oo-jtz"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="flipCounter" destination="9es-5s-0fF" id="XqS-f1-I2X"/>
@@ -248,13 +256,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Concentration" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uMH-UI-yN7">
-                                <rect key="frame" x="30" y="241" width="315" height="22"/>
+                                <rect key="frame" x="30" y="233" width="315" height="22"/>
                                 <fontDescription key="fontDescription" name="A-Goblin-Appears!" family="A Goblin Appears!" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dKJ-qm-d0s">
-                                <rect key="frame" x="63" y="353" width="248" height="29"/>
+                                <rect key="frame" x="63" y="345" width="248" height="37"/>
                                 <fontDescription key="fontDescription" name="A-Goblin-Appears!" family="A Goblin Appears!" pointSize="17"/>
                                 <state key="normal" title="Start New Game">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -264,7 +272,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome To" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Npq-Lg-KdT">
-                                <rect key="frame" x="98" y="215" width="178" height="18"/>
+                                <rect key="frame" x="98" y="200" width="178" height="18"/>
                                 <fontDescription key="fontDescription" name="A-Goblin-Appears!" family="A Goblin Appears!" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -278,7 +286,9 @@
                             <constraint firstItem="dKJ-qm-d0s" firstAttribute="centerX" secondItem="Exx-67-ecz" secondAttribute="centerX" id="ego-cE-5yP"/>
                             <constraint firstItem="Npq-Lg-KdT" firstAttribute="top" secondItem="kB3-kp-rt2" secondAttribute="bottom" constant="195" id="g2H-GZ-4je"/>
                             <constraint firstItem="eDn-SV-qws" firstAttribute="top" secondItem="dKJ-qm-d0s" secondAttribute="bottom" constant="285" id="s6U-zC-lch"/>
+                            <constraint firstItem="uMH-UI-yN7" firstAttribute="top" secondItem="Npq-Lg-KdT" secondAttribute="bottom" constant="15" id="ucA-4u-co6"/>
                             <constraint firstItem="uMH-UI-yN7" firstAttribute="centerX" secondItem="Exx-67-ecz" secondAttribute="centerX" id="xQd-g0-yfF"/>
+                            <constraint firstItem="Npq-Lg-KdT" firstAttribute="top" secondItem="kB3-kp-rt2" secondAttribute="bottom" constant="180" id="z6p-tp-r7e"/>
                         </constraints>
                     </view>
                 </viewController>
